--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
                 android:resource="@xml/file_paths"/>
 
         </provider>
+
+        <service android:name=".MusicService"/>
     </application>
 
 </manifest>
